<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLeft">

    <EditText
        android:id="@+id/editDialer"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:inputType="phone"
        android:text="@string/dialer_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/dialerButton"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:text="@string/dialer_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/editBrowser"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:text="@string/browser_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:maxLines="1"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/browserButton"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:text="@string/browser_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintVertical_bias="0.45" />

    <EditText
        android:id="@+id/editSms"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:hint="@string/sms_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/sms_button"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:text="@string/sms_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintVertical_bias="0.65" />

</androidx.constraintlayout.widget.ConstraintLayout>